# cia

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  project-notes.md
src/: agent.rs  codex.rs  config.rs  main.rs  model.rs  pi.rs  runner.rs  state.rs  tmux.rs  ui.rs
